<resources>
    <string name="app_name">Housemates</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_group_name">Group Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password_confirm">Confirm Password</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_register">Register</string>
    <string name="action_create_group">Create Group</string>
    <string name="action_join_group">Join Group</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_no_email">No account exists with this email</string>
    <string name="error_no_group">No group exists with this name</string>
    <string name="error_invalid_group">A group already exists with this name</string>
    <string name="error_email_taken">An account already exists with this email</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_mismatched_password">Passwords do not match</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_create_account">Create Account</string>
    <string name="title_activity_main">Housemates</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="prompt_group">Group ID</string>
    <string name="action_change_group">Change</string>
    <string name="title_activity_tasks">TasksActivity</string>
    <string name="title_activity_payment">Payment</string>

    <string name="username_label">Username:</string>
    <string name="nickname_label">Nickname:</string>
    <string name="date_of_birth_label">Date of birth:</string>

    <string name="add_list">Add List</string>
    <string name="title_activity_calendar">CalendarActivity</string>
    <string name="title_activity_splitwise2">Splitwise2</string>
    <string name="facebook_app_id">1540972702863894</string>
    <string name="title_activity_dummy">DummyActivity</string>
    <string name="title_activity_calendar2">CalendarActivity2</string>
</resources>
